Basic calculator functions complete.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container">
+        <div id="display">0</div>
+        <button class="button" id="clear-button">AC</button>
+        <button class="button" id="back-button">&#8592;</button>
+        <button class="button number-button" data-value="1">1</button>
+        <button class="button number-button" data-value="2">2</button>
+        <button class="button number-button" data-value="3">3</button>
+        <button class="button number-button" data-value="4">4</button>
+        <button class="button number-button" data-value="5">5</button>
+        <button class="button number-button" data-value="6">6</button>
+        <button class="button number-button" data-value="7">7</button>
+        <button class="button number-button" data-value="8">8</button>
+        <button class="button number-button" data-value="9">9</button>
+        <button class="button number-button" data-value="0">0</button>
+        <button class="button number-button" data-value=".">.</button>
+        <button class="button" id="equal-button">=</button>
+        <button class="button operator-button" data-operator="+">+</button>
+        <button class="button operator-button" data-operator="-">-</button>
+        <button class="button operator-button" data-operator="*">x</button>
+        <button class="button operator-button" data-operator="/">&divide;</button>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
