Added support for plus-minus key and adjusted styling rules slightly.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </div>
         <button class="button grid-clr" id="clear-button">AC</button>
         <button class="button grid-bck" id="back-button">&larr;</button>
+        <button class="button grid-plusminus" id="plusminus-button">&#177;</button>
         <button class="button number-button grid-1" data-value="1">1</button>
         <button class="button number-button grid-2" data-value="2">2</button>
         <button class="button number-button grid-3" data-value="3">3</button>
